# RAG-project

./: .gitignore  README.md  pyproject.toml
RAG/src/: generator.py  preprocess.py
RAG/tests/: embedding_model.py  llm_model.py
rag/src/: generator.py  retriever.py
rag/tests/: llm_model.py
temp/src/: indexing.py
